# build-your-own-data-curation-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
dedup_pipeline/: __init__.py  config.py  exceptions.py
dedup_pipeline/cli/: main.py
dedup_pipeline/clustering/: __init__.py  union_find.py
dedup_pipeline/evaluation/: __init__.py  metrics.py  synthetic_injector.py
dedup_pipeline/lsh/: __init__.py  banding.py  bucket_index.py  candidate_pairs.py
dedup_pipeline/minhash/: __init__.py  hash_functions.py  minhash.py  signature_store.py
dedup_pipeline/pipeline/: __init__.py  checkpointer.py  pipeline.py  reader.py  writer.py
dedup_pipeline/text_processing/: __init__.py  normalizer.py  shingler.py  tokenizer.py
docs/: chapter_01_why_data_curation_matters.md  chapter_02_jaccard_and_shingling.md  chapter_03_minhash_core_algorithm.md  chapter_04_lsh_candidate_pairs.md  chapter_05_pipeline_architecture.md  chapter_06_evaluation_and_advanced.md
examples/: dedup_agnews_example.py
tests/: conftest.py
tests/benchmarks/: bench_minhash_throughput.py
tests/integration/: test_concurrency.py  test_pipeline_e2e.py  test_pipeline_near_dupes.py  test_pipeline_resume.py
tests/property_based/: test_jaccard_estimator.py  test_union_find_invariants.py
tests/unit/: test_banding.py  test_bucket_index.py  test_candidate_pairs.py  test_checkpointer.py  test_config.py  test_exceptions.py  test_hash_functions.py  test_metrics.py  test_minhash.py  test_normalizer.py  test_reader.py  test_shingler.py  test_signature_store.py  test_synthetic_injector.py  test_tokenizer.py  test_union_find.py  test_writer.py
